# bir-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
docs/: EVALUATOR_IMPLEMENTATION_GUIDE.md  ROADMAP.md  SDK_RELEASE_CHECKLIST.md
docs/site/: api-reference.md  capture-privacy.md  cli-env.md  core-api.md  evals-experiments.md  index.md  integrations.md  quickstart.md  sampling-service-metadata.md  sending.md
examples/eval-demo/: README.md  dataset.jsonl  demo.py
examples/langchain-demo/: README.md  demo.py
examples/ollama-demo/: README.md  demo.py
examples/openai-demo/: README.md  demo.py
scripts/: fixtures.py  verify_release.py
src/bir/: __init__.py  __main__.py  _sdk.py  cli.py  evals.py  logging.py  testing.py
src/bir/integrations/: __init__.py  _common.py  anthropic.py  autogen.py  bedrock.py  cohere.py  crewai.py  dspy.py  google.py  haystack.py  instructor.py  langchain.py  litellm.py  llamaindex.py  mistral.py  ollama.py  openai.py  openai_agents.py  otel.py  pydantic_ai.py  vertexai.py
tests/: test_anthropic_integration.py  test_autogen_integration.py  test_bedrock_integration.py  test_cli.py  test_cohere_integration.py  test_crewai_integration.py  test_custom_redaction.py  test_docs_ci.py  test_dspy_integration.py  test_evals.py  test_examples.py  test_experiment_contract.py  test_google_integration.py  test_haystack_integration.py  test_instructor_integration.py  test_langchain_integration.py  test_litellm_integration.py  test_llamaindex_integration.py  test_logging.py  test_mistral_integration.py  test_model_prices.py  test_ollama_integration.py  test_openai_agents_integration.py  test_openai_integration.py  test_otel_integration.py  test_packaging.py  test_pydantic_ai_integration.py  test_redaction_parity.py  test_sdk.py  test_testing.py  test_vertexai_integration.py
tests/fixtures/: CHECKSUMS.sha256  README.md  event-schema-v1.json  redaction-cases.json  valid-events.jsonl  valid-experiment.json
