[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bir"
version = "0.1.0"
description = "Minimal local tracing SDK for LLM applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "FSL-1.1-ALv2" }
authors = [
  { name = "mskayacioglu" },
]
keywords = [
  "ai",
  "evals",
  "llm",
  "observability",
  "tracing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mskayacioglu/bir"
Documentation = "https://github.com/mskayacioglu/bir/tree/main/docs"
Source = "https://github.com/mskayacioglu/bir"
Issues = "https://github.com/mskayacioglu/bir/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
