[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bir-sdk"
version = "0.2.0"
description = "Minimal local tracing SDK for LLM applications."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "mskayacioglu" },
]
keywords = [
  "ai",
  "evals",
  "llm",
  "observability",
  "tracing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bir-ai/bir-python"
Documentation = "https://github.com/bir-ai/bir-python/tree/main/docs"
Source = "https://github.com/bir-ai/bir-python"
Issues = "https://github.com/bir-ai/bir-python/issues"

[project.scripts]
bir = "bir.cli:main"

[project.optional-dependencies]
# ``build``/``setuptools``/``wheel`` let scripts/verify_release.py build and
# install the sdist offline (``python -m build --sdist --no-isolation``); they
# are dev-only tooling and never become runtime dependencies.
dev = [
  "build>=1.0",
  "pytest>=8.0",
  "setuptools>=77",
  "wheel>=0.40",
]
docs = ["mkdocs>=1.5", "mkdocstrings>=0.24", "mkdocstrings-python>=1.10"]
otel = [
  "opentelemetry-sdk>=1.20",
  "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bir = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
